@@ -1,3 +1,15 @@
+ 2010-11-22 23:47  asfernandes 
+   M src/dsql/ExprNodes.cpp
+Misc
+
+ 2010-11-22 15:44  alexpeshkoff 
+   M src/common/common.h
+Damyan's patch for MIPSEB
+
+ 2010-11-22 08:23  alexpeshkoff 
+   M src/common/isc_sync.cpp
+This should fix first problem in BSD build
+
  2010-11-21 21:22  asfernandes 
    M src/common/os/guid.h
 Fixed a source of many warnings when using clang
